--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="https://karrotmarket-com-assets.krrt.io/_remix/_assets/favicon-FTMCU6V6.png" alt="당근마켓 로고">
             </a>
         </div>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="#">중고거래</a></li>
                 <li><a href="#">부동산</a></li>
@@ -23,7 +23,14 @@
                 <li><a href="#">동네생활</a></li>
                 <li><a href="#">모임</a></li>
             </ul>
-        </nav>
+        <div class="sub-button">
+            <a href="#">앱 다운로드</a>
+        </div>
     </header>
+    <section class="search-section">
+        <div class="location">
+            <span>유성구</span>
+        </div>
+    </section>
 </body>
 </html>
