--- a/index.html
+++ b/index.html
@@ -27,10 +27,34 @@
             <a href="#">앱 다운로드</a>
         </div>
     </header>
-    <section class="search-section">
-        <div class="location">
-            <span>유성구</span>
+    <div class="search-container">
+        <div class="search-bar">
+            <select class="location">
+                <option>유성구</option>
+            </select>
+            <select class="category">
+                <option>중고거래</option>
+                <option>동네업체</option>
+                <option>알바</option>
+                <option>중고차</option>
+                <option>부동산</option>
+            </select>
+            <input type="text" placeholder="검색어를 입력해 주세요">
+            <button></button>
         </div>
-    </section>
+        <div class="popular-searches">
+            인기 검색어
+            <span>아이폰</span>
+            <span>의자</span>
+            <span>자전거</span>
+            <span>컴퓨터</span>
+            <span>책상</span>
+            <span>소파</span>
+            <span>원피스</span>
+            <span>전기자전거</span>
+            <span>식탁</span>
+            <span>모니터</span>
+        </div>
+    </div>
 </body>
 </html>
