--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <option>부동산</option>
             </select>
             <input type="text" placeholder="검색어를 입력해 주세요">
-            <button></button>
+            <button type="submit">검색 아이콘 넣을 예정</button>
         </div>
         <div class="popular-searches">
             인기 검색어
