--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=" stylesheet" href="./index.css">
-    <title>carrot market</title>
+    <title>Karrot market</title>
 </head>
 <body>
     <header>
@@ -29,9 +29,9 @@
     </header>
     <div class="search-container">
         <div class="search-bar">
-            <select class="location">
-                <option>유성구</option>
-            </select>
+            <div class="location">
+                <span>유성구</span>
+            </div>
             <select class="category">
                 <option>중고거래</option>
                 <option>동네업체</option>
@@ -55,6 +55,98 @@
             <span>식탁</span>
             <span>모니터</span>
         </div>
+        <section class="banner-section">
+            <h2>믿을만한<br>이웃 간 중고거래<br></h2>
+            <h4>동네 주민들과 가깝고 따듯한 거래를<br>지금 경험해보세요.</h4>
+            <div class="banner-image">
+                <img src="" alt="배너 이미지">
+            </div>
+        </section>
+        <section class="popular-category">
+            <h3>인기 카테고리</h3>
+            <div class="categories">
+                <div class="cotagory-item">디지털기기</div>
+                <div class="cotagory-item">생활가전</div>
+                <div class="cotagory-item">가구/인테리어</div>
+                <div class="cotagory-item">생활/주방</div>
+                <div class="cotagory-item">유아동</div>
+                <div class="cotagory-item">유아도서</div>
+            </div>
+        </section>
+        <section class="download-section">
+            <h2>당근에서 가까운 이웃과 함께해요.<br>지금 바로 다운로드하기</h2>
+            <img src="" alt="애플스토어">
+            <img src="" alt="구글플레이">
+        </section>
+        <footer>
+            <div  class="footer-top">
+                <div class="logo">
+                    <img src="https://karrotmarket-com-assets.krrt.io/_remix/_assets/favicon-FTMCU6V6.png" alt="당근마켓 로고">
+                </div>
+                <div class="footer-nav">
+                    <div class="footer-section">
+                        <h4>회사</h4>
+                        <ul>
+                            <li><a href="#">회사 소개</a></li>
+                            <li><a href="#">당근페이</a></li>
+                            <li><a href="#">팀문화</a></li>
+                            <li><a href="#">서비스 소개</a></li>
+                            <li><a href="#">블로그</a></li>
+                            <li><a href="#">채용</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>탐색</h4>
+                        <ul>
+                            <li><a href="#">중고거래</a></li>
+                            <li><a href="#">부동산</a></li>
+                            <li><a href="#">중고차</a></li>
+                            <li><a href="#">알바</a></li>
+                            <li><a href="#">동네업체</a></li>
+                            <li><a href="#">동네생활</a></li>
+                            <li><a href="#">모임</a></li>
+                            <li><a href="#">채팅하기</a></li>
+                            <li><a href="#">이웃</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>비지니스</h4>
+                        <ul>
+                            <li><a href="#">당근 비지니스</a></li>
+                            <li><a href="#">제휴 문의</a></li>
+                            <li><a href="#">광고 문의</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Karrot</h4>
+                        <ul>
+                            <li><a href="#">Canada</a></li>
+                            <li><a href="#">United States</a></li>
+                            <li><a href="#">United Kingdom</a></li>
+                            <li><a href="#">Japan</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>문의</h4>
+                        <ul>
+                            <li><a href="#">IR</a></li>
+                            <li><a href="#">PR</a></li>
+                            <li><a href="#">고객센터</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>(주) 당근마켓</p><br>
+                <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
+                <p>직업정보제공사업 신고번호 J1200020200016<br></p>
+                <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
+                <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
+                <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
+                <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
+                <p>이용약관 | 개인정보처리방침 | 운영정책 | 위치기반서비스 이용약관 | 청소년보호정책</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
