--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
         <footer>
             <div  class="footer-top">
-                <div class="logo">
+                <div class="footer-logo">
                     <img src="https://karrotmarket-com-assets.krrt.io/_remix/_assets/favicon-FTMCU6V6.png" alt="당근마켓 로고">
                 </div>
                 <div class="footer-nav">
