--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section class="popular-category">
             <h3>인기 카테고리</h3>
             <div class="categories">
-                <div class="cotagory-item">
+                <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png">
                     <p>디지털기기</p>
                 </div>
@@ -73,19 +73,19 @@
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png">
                     <p>생활가전</p>
                 </div>
-                <div class="cotagory-item">
+                <div class="category-item">
                     <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png">
                     <p>가구/인테리어</p>
                 </div>
-                <div class="cotagory-item">
+                <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png">
                     <p>생활/주방</p>
                 </div>
-                <div class="cotagory-item">
+                <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png">
                     <p>유아동</p>
                 </div>
-                <div class="cotagory-item">
+                <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png">
                     <p>유아도서</p>
                 </div>
@@ -94,13 +94,13 @@
         <section class="download-section">
             <h2>당근에서 가까운 이웃과 함께해요.<br>지금 바로 다운로드하기</h2>
             <div class="download-content">
-                <img src="" alt="" class="app-image">
-                <img src="" alt="" class="app-image">
-                <img src="" alt="" class="app-image">
-                <div class="app-button">
-                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="애플스토어">
-                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="구글플레이">
-                </div>
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="page1" class="app-image left">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="page2" class="app-image center">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="page3" class="app-image right">
+            </div>
+            <div class="app-button">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="애플스토어">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="구글플레이">
             </div>
         </section>
         <footer>
