--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
-                <img src="https://karrotmarket-com-assets.krrt.io/_remix/_assets/favicon-FTMCU6V6.png" alt="당근마켓 로고">
+            <a href="/kr/?in=%EC%9C%A0%EC%84%B1%EA%B5%AC-1154">
+                <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고">
             </a>
         </div>
         <nav class="main-nav">
