--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
                 <li><a href="#">중고거래</a></li>
                 <li><a href="#">부동산</a></li>
                 <li><a href="#">중고차</a></li>
-                <li><a href="#">알바</a></li>
+                <li>
+                    <select class="job-select" aria-label="알바">
+                        <option>알바</option>
+                        <option>당근알바 소개</option>
+                        <option>알바 검색</option>
+                        <option>기업형 서비스</option>
+                        <option>신뢰와 안전</option>
+                    </select>
+                </li>
                 <li><a href="#">동네업체</a></li>
                 <li><a href="#">동네생활</a></li>
                 <li><a href="#">모임</a></li>
