--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/kr/?in=%EC%9C%A0%EC%84%B1%EA%B5%AC-1154">
+            <a href="/">
                 <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고">
             </a>
         </div>
