--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
+            <a href="#">
                 <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고">
             </a>
         </div>
