--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header-wrap">
             <div class="header-logo">
-                <img src="" width="150" alt="logo">
+                <img src="http://www.w3.org/2000/svg" width="150" alt="logo">
             </div>
             <nav class="header-menu">
                 <a href="#">중고거래</a>
@@ -51,12 +51,30 @@
     <section class="categories">
         <h2>인기 카테고리</h2>
         <div class="category-list">
-           <div class="category-item">디지털기기</div>
-           <div class="category-item">생활가전</div>
-           <div class="category-item">가구/인테리어</div>
-           <div class="category-item">생활/주방</div>
-           <div class="category-item">유아동</div>
-           <div class="category-item">유아도서</div>
+           <div class="category-item">
+              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
+              <p>디지털기기</p>
+            </div>
+           <div class="category-item">
+              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png" alt="생활가전">
+              <p>생활가전</p>
+            </div>
+           <div class="category-item">
+              <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png" alt="가구/인테리어">
+              <p>가구/인테리어</p>
+            </div>
+           <div class="category-item">
+              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png" alt="생활/주방">
+              <p>생활/주방</p>
+            </div>
+           <div class="category-item">
+              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png" alt="유아동">
+              <p>유아동</p>
+            </div>
+           <div class="category-item">
+              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png" alt="유아도서">
+              <p>유아도서</p>
+            </div>
         </div>
     </section>
     <section class="app-adver">
