--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header-wrap">
             <div class="header-logo">
-                <img src="http://www.w3.org/2000/svg" width="150" alt="logo">
+                <img src="C:\Users\chung\Documents\GitHub\Carrot_Market_Clone_Coding\karrot_market_logo1.png" width="150" alt="logo">
             </div>
             <nav class="header-menu">
                 <a href="#">중고거래</a>
