--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <a href="#">부동산</a>
                 <a href="#">중고차</a>
                 <a href="#">알바</a>
+                <div class="sub-menu">
+                    <a href="#">알바 검색</a>
+                    <a href="#">당근알바 소개</a>
+                    <a href="#">기업형 서비스</a>
+                    <a href="#">신뢰와 안전</a>
+                </div>
                 <a href="#">동네업체</a>
                 <a href="#">동네생활</a>
                 <a href="#">모임</a>
