--- a/index.html
+++ b/index.html
@@ -7,160 +7,172 @@
     <title>Karrot market</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header-wrap">
-            <div class="header-logo">
-                <img src="C:\Users\chung\Documents\GitHub\Carrot_Market_Clone_Coding\karrot_market_logo1.png" width="150" alt="logo">
-            </div>
-            <nav class="header-menu">
-                <a href="#">중고거래</a>
-                <a href="#">부동산</a>
-                <a href="#">중고차</a>
-                <a href="#">알바</a>
-                <div class="sub-menu">
-                    <a href="#">알바 검색</a>
-                    <a href="#">당근알바 소개</a>
-                    <a href="#">기업형 서비스</a>
-                    <a href="#">신뢰와 안전</a>
+    <div class="container">
+        <header class="header">
+            <div class="header-wrap">
+                <div class="header-logo">
+                    <img src="C:\Users\chung\Documents\GitHub\Carrot_Market_Clone_Coding\karrot_market_logo1.png" width="150" alt="logo">
                 </div>
-                <a href="#">동네업체</a>
-                <a href="#">동네생활</a>
-                <a href="#">모임</a>
-            </nav>
-            <div class="search-bar">
-                <input type="text" placeholder="검색어를 입력하세요">
+                <nav class="header-menu">
+                    <a href="#">중고거래</a>
+                    <a href="#">부동산</a>
+                    <a href="#">중고차</a>
+                    <a href="#">알바</a>
+                    <div class="sub-menu">
+                        <a href="#">알바 검색</a>
+                        <a href="#">당근알바 소개</a>
+                        <a href="#">기업형 서비스</a>
+                        <a href="#">신뢰와 안전</a>
+                    </div>
+                    <a href="#">동네업체</a>
+                    <a href="#">동네생활</a>
+                    <a href="#">모임</a>
+                </nav>
+                <div class="search-bar">
+                    <input type="text" placeholder="검색어를 입력하세요">
+                </div>
             </div>
-        </div>
-    </header>
-    <div class="popular-searches">
-        <span class="search-label">인기 검색어</span>
-        <button class="search-item">아이폰</button>
-        <button class="search-item">의자</button>
-        <button class="search-item">자전거</button>
-        <button class="search-item">컴퓨터</button>
-        <button class="search-item">책상</button>
-        <button class="search-item">소파</button>
-        <button class="search-item">원피스</button>
-        <button class="search-item">전기자전거</button>
-        <button class="search-item">식탁</button>
-        <button class="search-item">모니터</button>
+        </header>
     </div>
-    <section class="banner">
-        <div class="banner-content">
-          <h1>믿을만한<br>이웃 간 중고거래</h1>
-          <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험해보세요.</p>
+    <div class="container">
+        <div class="popular-searches">
+            <span class="search-label">인기 검색어</span>
+            <a href="#" class="search-item">아이폰</a>
+            <a href="#" class="search-item">의자</a>
+            <a href="#" class="search-item">자전거</a>
+            <a href="#" class="search-item">컴퓨터</a>
+            <a href="#" class="search-item">책상</a>
+            <a href="#" class="search-item">소파</a>
+            <a href="#" class="search-item">원피스</a>
+            <a href="#" class="search-item">전기자전거</a>
+            <a href="#" class="search-item">식탁</a>
+            <a href="#" class="search-item">모니터</a>
         </div>
-        <div class="banner-image">
-          <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="korrot-image">
-        </div>
-    </section>
-    <section class="categories">
-        <h2>인기 카테고리</h2>
-        <div class="category-list">
-           <div class="category-item">
-              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
-              <p>디지털기기</p>
+    </div>
+    <div class="container">
+        <section class="banner">
+            <div class="banner-content">
+              <h1>믿을만한<br>이웃 간 중고거래</h1>
+              <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험해보세요.</p>
             </div>
-           <div class="category-item">
-              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png" alt="생활가전">
-              <p>생활가전</p>
+            <div class="banner-image">
+              <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="korrot-image">
             </div>
-           <div class="category-item">
-              <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png" alt="가구/인테리어">
-              <p>가구/인테리어</p>
+        </section>
+    </div>
+    <div class="container">
+        <section class="categories">
+            <h2>인기 카테고리</h2>
+            <div class="category-list">
+               <div class="category-item">
+                  <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
+                  <p>디지털기기</p>
+                </div>
+               <div class="category-item">
+                  <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png" alt="생활가전">
+                  <p>생활가전</p>
+                </div>
+               <div class="category-item">
+                  <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png" alt="가구/인테리어">
+                  <p>가구/인테리어</p>
+                </div>
+               <div class="category-item">
+                  <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png" alt="생활/주방">
+                  <p>생활/주방</p>
+                </div>
+               <div class="category-item">
+                  <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png" alt="유아동">
+                  <p>유아동</p>
+                </div>
+               <div class="category-item">
+                  <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png" alt="유아도서">
+                  <p>유아도서</p>
+                </div>
             </div>
-           <div class="category-item">
-              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png" alt="생활/주방">
-              <p>생활/주방</p>
+        </section>
+    </div>
+    <div class="container">
+        <section class="app-adver">
+            <div class="adver-content">
+               <h3>당근에서 가까운 이웃과 함께해요.</h3>
+               <p>지금 바로 다운로드하기</p>
+               <div class="app-buttons">
+                  <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="App Store"></a>
+                  <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="Google Play"></a>
+                </div>
             </div>
-           <div class="category-item">
-              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png" alt="유아동">
-              <p>유아동</p>
+            <div class="app-image">
+               <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app_image_1">
+               <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app_image_2">
+               <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app_image_1">
             </div>
-           <div class="category-item">
-              <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png" alt="유아도서">
-              <p>유아도서</p>
+        </section>
+    </div>
+    <div class="container">
+        <footer class="footer">
+            <div class="footer-sections">
+                <div class="footer-section">
+                    <h4>회사</h4>
+                    <ul>
+                        <li><a href="#">회사 소개</a></li>
+                        <li><a href="#">당근페이</a></li>
+                        <li><a href="#">팀문화</a></li>
+                        <li><a href="#">서비스 소개</a></li>
+                        <li><a href="#">블로그</a></li>
+                        <li><a href="#">채용</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>탐색</h4>
+                    <ul>
+                        <li><a href="#">중고거래</a></li>
+                        <li><a href="#">부동산</a></li>
+                        <li><a href="#">중고차</a></li>
+                        <li><a href="#">알바</a></li>
+                        <li><a href="#">동네업체</a></li>
+                        <li><a href="#">동네생활</a></li>
+                        <li><a href="#">모임</a></li>
+                        <li><a href="#">채팅하기</a></li>
+                        <li><a href="#">이웃</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>비즈니스</h4>
+                    <ul>
+                        <li><a href="#">당근 비즈니스</a></li>
+                        <li><a href="#">제휴 문의</a></li>
+                        <li><a href="#">광고 문의</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Karrot</h4>
+                    <ul>
+                        <li><a href="#">Canada</a></li>
+                        <li><a href="#">United States</a></li>
+                        <li><a href="#">United Kingdom</a></li>
+                        <li><a href="#">Japan</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>문의</h4>
+                    <ul>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">PR</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="app-adver">
-        <div class="adver-content">
-           <h3>당근에서 가까운 이웃과 함께해요.</h3>
-           <p>지금 바로 다운로드하기</p>
-           <div class="app-buttons">
-              <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="App Store"></a>
-              <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="Google Play"></a>
+            <div class="footer-bottom">
+                <p>(주) 당근마켓</p><br>
+                <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
+                <p>직업정보제공사업 신고번호 J1200020200016<br></p>
+                <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
+                <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
+                <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
+                <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
+                <p>이용약관 | 개인정보처리방침 | 운영정책 | 위치기반서비스 이용약관 | 청소년보호정책</p>
             </div>
-        </div>
-        <div class="app-image">
-           <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app_image_1">
-           <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app_image_2">
-           <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app_image_1">
-        </div>
-    </section>
-    <footer class="footer">
-        <div class="footer-sections">
-            <div class="footer-section">
-                <h4>회사</h4>
-                <ul>
-                    <li><a href="#">회사 소개</a></li>
-                    <li><a href="#">당근페이</a></li>
-                    <li><a href="#">팀문화</a></li>
-                    <li><a href="#">서비스 소개</a></li>
-                    <li><a href="#">블로그</a></li>
-                    <li><a href="#">채용</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>탐색</h4>
-                <ul>
-                    <li><a href="#">중고거래</a></li>
-                    <li><a href="#">부동산</a></li>
-                    <li><a href="#">중고차</a></li>
-                    <li><a href="#">알바</a></li>
-                    <li><a href="#">동네업체</a></li>
-                    <li><a href="#">동네생활</a></li>
-                    <li><a href="#">모임</a></li>
-                    <li><a href="#">채팅하기</a></li>
-                    <li><a href="#">이웃</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>비즈니스</h4>
-                <ul>
-                    <li><a href="#">당근 비즈니스</a></li>
-                    <li><a href="#">제휴 문의</a></li>
-                    <li><a href="#">광고 문의</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Karrot</h4>
-                <ul>
-                    <li><a href="#">Canada</a></li>
-                    <li><a href="#">United States</a></li>
-                    <li><a href="#">United Kingdom</a></li>
-                    <li><a href="#">Japan</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>문의</h4>
-                <ul>
-                    <li><a href="#">IR</a></li>
-                    <li><a href="#">PR</a></li>
-                    <li><a href="#">고객센터</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>(주) 당근마켓</p><br>
-            <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
-            <p>직업정보제공사업 신고번호 J1200020200016<br></p>
-            <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
-            <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
-            <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
-            <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
-            <p>이용약관 | 개인정보처리방침 | 운영정책 | 위치기반서비스 이용약관 | 청소년보호정책</p>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
