--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="banner">
             <div class="banner-content">
               <h1>믿을만한<br>이웃 간 중고거래</h1>
-              <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험해보세요.</p>
+              <p>동네 주민들과 가깝고 따뜻한 거래를<br>지금 경험해보세요.</p>
             </div>
             <div class="banner-image">
               <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="korrot-image">
