--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                 </ul>
             </div>
             <div class="footer-social">
-                <a href="#"><img src="https://www.facebook.com/daangn/" alt="facebook"></a>
-                <a href="#"><img src="https://www.instagram.com/daangnmarket/" alt="instagram"></a>
-                <a href="#"><img src="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured" alt="youtube"></a>
+                <a href="https://www.facebook.com/daangn/"><img src="" alt="facebook"></a>
+                <a href="https://www.instagram.com/daangnmarket/"><img src="" alt="instagram"></a>
+                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img src="" alt="youtube"></a>
             </div>
             <div class="footer-bottom">
                 <p>(주) 당근마켓</p><br>
