--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Karrot market</title>
 </head>
 <body>
-    <header>
-        <div class="header-container">
+    <div class="container">
+        <header>
             <div class="logo">
                 <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고" aria-label="당근">
             </div>
@@ -30,89 +30,87 @@
             <button class="app-download-button">
                 <a href="#">앱 다운로드</a>
             </button>
-        </div>
-    </header>
-    <section class="location">
-        <a href="#">유성구</a>
-    </section>
-    <section class="search-bar">
-        <button>중고거래</button>
-        <input type="text" placeholder="검색어를 입력해주세요">
-    </section>
-    <section class="popular-searches">
-        <nav>
-            <p>인기 검색어</p>
-            <a href="#" class="search-item">아이폰</a>
-            <a href="#" class="search-item">의자</a>
-            <a href="#" class="search-item">자전거</a>
-            <a href="#" class="search-item">컴퓨터</a>
-            <a href="#" class="search-item">책상</a>
-            <a href="#" class="search-item">소파</a>
-            <a href="#" class="search-item">원피스</a>
-            <a href="#" class="search-item">전기자전거</a>
-            <a href="#" class="search-item">식탁</a>
-            <a href="#" class="search-item">모니터</a>
-        </nav>
-    </section>
-    <section class="banner">
-        <div class="banner-text">
-            <h1>믿을만한<br>이웃 간 중고거래</h1>
-            <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험하세요.</p>
-        </div>
-        <div class="banner-content">
-            <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="이미지">
-        </div>
-    </section>
-    <section class="categories">
-        <h2>인기 카테고리</h2>
-        <div class="category-list">
-            <div class="category-item">
-                <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
-                <p>디지털기기</p>
+        </header>
+        <section class="location">
+            <a href="#">유성구</a>
+        </section>
+        <section class="search-bar">
+            <button>중고거래</button>
+            <input type="text" placeholder="검색어를 입력해주세요">
+        </section>
+        <section class="popular-searches">
+            <nav>
+                <p>인기 검색어</p>
+                <a href="#" class="search-item">아이폰</a>
+                <a href="#" class="search-item">의자</a>
+                <a href="#" class="search-item">자전거</a>
+                <a href="#" class="search-item">컴퓨터</a>
+                <a href="#" class="search-item">책상</a>
+                <a href="#" class="search-item">소파</a>
+                <a href="#" class="search-item">원피스</a>
+                <a href="#" class="search-item">전기자전거</a>
+                <a href="#" class="search-item">식탁</a>
+                <a href="#" class="search-item">모니터</a>
+            </nav>
+        </section>
+        <section class="banner">
+            <div class="banner-text">
+                <h1>믿을만한<br>이웃 간 중고거래</h1>
+                <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험하세요.</p>
             </div>
-             <div class="category-item">
-                <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png" alt="생활가전">
-                <p>생활가전</p>
+            <div class="banner-content">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="이미지">
             </div>
-            <div class="category-item">
-                <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png" alt="가구/인테리어">
-                <p>가구/인테리어</p>
+        </section>
+        <section class="categories">
+            <h2>인기 카테고리</h2>
+            <div class="category-list">
+                <div class="category-item">
+                    <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
+                    <p>디지털기기</p>
+                </div>
+                 <div class="category-item">
+                    <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/8999c0c18e64026e11b7859fcd1ca85142b8de45ba6c29b8d886c2841d7a2eaa.png" alt="생활가전">
+                    <p>생활가전</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://dtxw8q4qct0d4.cloudfront.net/origin/etc/202307/7bb08256f1f87ac704907ee82a03201e6c4a3e668d71ef44d4129b30ccb3dfcf.png" alt="가구/인테리어">
+                    <p>가구/인테리어</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png" alt="생활/주방">
+                    <p>생활/주방</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png" alt="유아동">
+                    <p>유아동</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png" alt="유아도서">
+                    <p>유아도서</p>
+                </div>
             </div>
-            <div class="category-item">
-                <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/5db61d75ec51aefb77820d293491594d53ca63ab1ade5d7a154f1f51b678d1e2.png" alt="생활/주방">
-                <p>생활/주방</p>
+        </section>
+        <section class="app-adver">
+            <div class="app-text">
+                <h2>당근에서 가까운 이웃과 함께해요.</h2>
+                <h1>지금 바로 다운로드</h1>
             </div>
-            <div class="category-item">
-                <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/e3f9aeef2cc1efb65bd139c125a4983d552d62aca69eb16f8349b36bcaa17d62.png" alt="유아동">
-                <p>유아동</p>
+            <div class="app-button">
+                <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
+                <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
             </div>
-            <div class="category-item">
-                <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/4c69e8c4c4598e5b23a1fba1a821a830cbd830702b533d3a85ae14aa22a62e5c.png" alt="유아도서">
-                <p>유아도서</p>
+            <div class="app-content">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
             </div>
-        </div>
-    </section>
-    <section class="app-adver">
-        <div class="app-text">
-            <h2>당근에서 가까운 이웃과 함께해요.</h2>
-            <h1>지금 바로 다운로드</h1>
-        </div>
-        <div class="app-button">
-            <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
-            <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
-        </div>
-        <div class="app-content-1">
-            <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
-        </div>
-        <div class="app-content-2">
-            <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app-image-2">
-        </div>
-        <div class="app-content-3">
-            <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app-image-3">
-        </div>
-    </section>
-    <footer>
-        <div class="footer-container">
+            <div class="app-content">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app-image-2">
+            </div>
+            <div class="app-content">
+                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app-image-3">
+            </div>
+        </section>
+        <footer>
             <div class="footer-links">
                 <h4>회사</h4>
                 <ul>
@@ -170,7 +168,7 @@
                 <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
                 <p>이용약관 | 개인정보처리방침 | 운영정책 | 위치기반서비스 이용약관 | 청소년보호정책</p>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
