--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고" aria-label="당근">
+                <img src="http://www.w3.org/2000/svg" alt="당근마켓 로고" >
             </div>
             <nav>
                 <a href="#">중고거래</a>
