--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#">중고거래</a>
                 <a href="#">부동산</a>
                 <a href="#">중고차</a>
-                <a href="#">알바</a>
+                <a href="#" class="with-submenu">알바</a>
                 <div class="sub-menu">
                     <a href="#">알바 검색</a>
                     <a href="#">당근알바 소개</a>
