--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <div class="search-container">
         <section class="location">
             <a href="#">유성구</a>
-            <img src="" alt-="location-icon">
+            <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
         </section>
         <section class="search-bar">
             <input type="text" placeholder="검색어를 입력해주세요">
             <button type="search-button">
-                <img src="" alt="search-button">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search-button">
             </button>
         </section>
         <section class="popular-searches">
@@ -53,7 +53,7 @@
                 <a href="#">의자</a>
                 <a href="#">자전거</a>
                 <a href="#">컴퓨터</a>
-                <a href="#"></a>책상</a>
+                <a href="#">책상</a>
                 <a href="#">소파</a>
                 <a href="#">원피스</a>
                 <a href="#">전기자전거</a>
@@ -105,15 +105,15 @@
         </section>
     </div>
     <div class="app-container">
-        <section class="app-adver">
-            <div class="app-text">
-                <h2>당근에서 가까운 이웃과 함께해요.</h2>
-                <h1>지금 바로 다운로드</h1>
-            </div>
+        <section class="app-text">
+            <h2>당근에서 가까운 이웃과 함께해요.</h2>
+            <h1>지금 바로 다운로드</h1>
             <div class="app-button">
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
             </div>
+        </section>
+        <section class="app-adver">
             <div class="app-content">
                 <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
             </div>
@@ -127,7 +127,7 @@
     </div>
     <div class="footer-container">
         <div class="footer-right">
-            <div class="footer-links">
+            <div class="footer-links-1">
                 <h4>회사</h4>
                 <ul>
                     <li><a href="#">회사 소개</a></li>
@@ -171,10 +171,13 @@
             </div>
         </div>
         <div class="footer-left">
+            <div class="footer-logo">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
+            </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com/daangn/"></a>
-                <a href="https://www.instagram.com/daangnmarket/"></a>0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"/><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"/><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"/></svg></a>
-                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"/><path fill="#FFF" d="M20 31L20 17 32 24z"/></svg></a>
+                <a href="https://www.facebook.com/daangn/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo"></a>
+                <a href="https://www.instagram.com/daangnmarket/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo"></a>
+                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo"></a>
             </div>
         </div>
         <div class="footer-bottom">
@@ -185,7 +188,14 @@
             <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
             <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
             <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
-            
+            <div class="footer-links-2">
+                <a href="#"><p>이용약관</p></a>
+                <a href="#"><p>개인정보처리방침</p></a>
+                <a href="#"><p>운영정책</p></a>
+                <a href="#"><p>위치기반서비스 이용약관</p></a>
+                <a href="#"><p>이용자보호 비전과 계획</p></a>
+                <a href="#"><p>청소년보호정책</p></a>
+            </div>
         </div>
     </div>
 </body>
