--- a/index.html
+++ b/index.html
@@ -34,18 +34,24 @@
             <a href="#">앱 다운로드</a>
         </button>
     </header>
-
     <div class="search-container">
         <section class="location">
             <a href="#">유성구</a>
             <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
         </section>
-        <section class="search-bar">
-            <input type="text" placeholder="검색어를 입력해주세요">
-            <button type="search-button">
-                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search-button">
-            </button>
-        </section>
+        <div class="search-others">
+            <div class="search-bar">
+                <div class="search-bar-button">
+                    <a href="#">중고거래</a>
+                </div>
+                <div class="search-bar-input">
+                    <input type="text" placeholder="검색어를 입력해주세요">
+                </div>
+                <div class="search-icon">
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
+                </div>
+            </div>
+        </div>
         <section class="popular-searches">
             <nav>
                 인기 검색어
@@ -62,7 +68,7 @@
             </nav>
         </section>
     </div>
-    <div class="banner-container">
+    <div class="main-container">
         <section class="banner">
             <div class="banner-text">
                 <h1>믿을만한<br>이웃 간 중고거래</h1>
@@ -72,10 +78,8 @@
                 <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="이미지">
             </div>
         </section>
-    </div>
-    <div class="category-container">
-        <h2>인기 카테고리</h2>
         <section class="categories">
+            <h2>인기 카테고리</h2>
             <div class="category-list">
                 <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
@@ -103,8 +107,6 @@
                 </div>
             </div>
         </section>
-    </div>
-    <div class="app-container">
         <section class="app-text">
             <h2>당근에서 가까운 이웃과 함께해요.</h2>
             <h1>지금 바로 다운로드</h1>
