--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
                         <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
                     </div>
                 </div>
-            </section>
-            <section class="popular-searches">
-                <nav>
-                    인기 검색어
-                    <a href="#">아이폰</a>
-                    <a href="#">의자</a>
-                    <a href="#">자전거</a>
-                    <a href="#">컴퓨터</a>
-                    <a href="#">책상</a>
-                    <a href="#">소파</a>
-                    <a href="#">원피스</a>
-                    <a href="#">전기자전거</a>
-                    <a href="#">식탁</a>
-                    <a href="#">모니터</a>
-                </nav>
+                <div class="popular-searches">
+                    <nav>
+                        인기 검색어
+                        <a href="#">아이폰</a>
+                        <a href="#">의자</a>
+                        <a href="#">자전거</a>
+                        <a href="#">컴퓨터</a>
+                        <a href="#">책상</a>
+                        <a href="#">소파</a>
+                        <a href="#">원피스</a>
+                        <a href="#">전기자전거</a>
+                        <a href="#">식탁</a>
+                        <a href="#">모니터</a>
+                    </nav>
+                </div>
             </section>
         </div>
     </header>
