--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="banner">
             <div class="banner-text">
                 <h1>믿을만한<br>이웃 간 중고거래</h1>
-                <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험하세요.</p>
+                <p>동네 주민들과 가깝고 따뜻한 거래를<br>지금 경험해보세요.</p>
             </div>
             <div class="banner-content">
                 <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/56e986c736d6e4f5526448a7a408a0b8f370394e-1125x930.png" alt="이미지">
@@ -113,19 +113,21 @@
         </section>
         <section class="app-text">
             <h2>당근에서 가까운 이웃과 함께해요.</h2>
-            <h1>지금 바로 다운로드</h1>
+            <h1>지금 바로 다운로드하기</h1>
             <div class="app-button">
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
             </div>
             <div class="app-content">
-                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
-            </div>
-            <div class="app-content">
-                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app-image-2">
-            </div>
-            <div class="app-content">
-                <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app-image-3">
+                <div class="app-image-1">
+                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
+                </div>
+                <div class="app-image-2">
+                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app-image-2">
+                </div>
+                <div class="app-image-3">
+                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app-image-3">
+                </div>
             </div>
         </section>
     </div>
